--- a/database/search_database.ipynb
+++ b/database/search_database.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,10 +28,10 @@
      "text": [
       "[{'exhibition_name': '文化勲章受章・卒寿記念特別展 上村淳之展',\n",
       "  'exhibition_number': 10,\n",
-      "  'exhibition_reason': '上村淳之は日本の花鳥画家として有名であり、その作品は美しく優雅な絵画で知られています。また、文化勲章を受章した著名な芸術家です。奈良県の公益財団法人松伯美術館で開催されるこの特別展では、上村淳之の作品をじっくりと鑑賞することができます。奈良で有名な絵画を楽しみたい方におすすめの展示です。'},\n",
+      "  'exhibition_reason': '上村淳之は日本画家であり、花鳥画を得意としています。彼の作品は美しい自然の風景や鳥の描写が特徴であり、絵画愛好家にとって魅力的な展示となるでしょう。また、上村淳之が文化勲章を受章した歴史的な展示でもあります。'},\n",
       " {'exhibition_name': '文字を愛でる\\u3000―経典・文学・手紙から―',\n",
       "  'exhibition_number': 17,\n",
-      "  'exhibition_reason': '奈良県の公益財団法人大和文華館で開催されるこの展示は、中国や日本の書の文化をテーマにしています。美しい文字の世界を味わうことができる経典や文学作品、手紙が展示されています。奈良で有名な絵画だけでなく、文字の美しさにも興味がある方におすすめです。'}]\n"
+      "  'exhibition_reason': 'この展示では、経典や文学作品、手紙などを通じて、文字の美しさやその歴史的な価値を紹介しています。奈良の歴史的な背景を持った書の文化に触れることができる展示会です。絵画だけでなく、文字を愛でることに興味がある方におすすめです。'}]\n"
      ]
     }
    ],
@@ -97,110 +97,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: 関西で有名な絵画が展示される展示会\n",
+      "Query: 幕末のあたりの歴史が好きな歴女です！\n",
       "Rank: Title Similarity\n",
-      "1: 73 奈良県 近代の日本画〈日本画展示室〉 0.9113036395213371\n",
-      "2: 84 和歌山県 小企画展「原勝四郎と同時代の画家たち」 0.8947766196284109\n",
-      "3: 76 奈良県 特別企画展　やまと絵のこころ 0.894100672799945\n",
-      "4: 72 奈良県 松本竣介、駒井哲郎から舟越桂まで－戦後日本の洋画・版画－〈洋画展示室〉 0.8929414852733095\n",
-      "5: 71 奈良県 企画展　未来につなぐ日本画展 －松伯美術館公募展優秀賞受賞作家の現在Ⅱ－ 0.8881885814638384\n",
-      "6: 31 京都府 白沙村荘秋季展　2023　「名品よ、再び。」 0.8875822303635622\n",
-      "7: 1 三重県 開館30周年記念　特別展 立原位貫　〜想像力から創造力へ〜 0.8874311468997833\n",
-      "8: 36 京都府 浜村満果 個展「9 Hours Sleep」 0.8868082630404737\n",
-      "9: 83 和歌山県 原勝四郎展 　南海の光を描く 0.8864869533262518\n",
-      "10: 33 京都府 表装の愉しみ －ある表具師のものがたり 0.8817645514549303\n",
-      "11: 38 大阪府 安野光雅展 0.8810993240232374\n",
-      "12: 65 奈良県 特別展　漂泊の画家　不染鉄 0.8798356142783563\n",
-      "13: 5 三重県 隙あらば猫 町田尚子絵本原画展 0.8795057094278214\n",
-      "14: 3 三重県 つながる琳派スピリット　神坂雪佳展 0.8780155559908251\n",
-      "15: 67 奈良県 おん祭と春日信仰の美術 0.8775901032376583\n",
-      "16: 54 兵庫県 司馬遼太郎生誕百年　企画展「小林修写真展　司馬遼太郎『街道をゆく』の視点　－歩いた風土、見抜いた時代－」 0.8765350786219296\n",
-      "17: 57 兵庫県 第59回 姫路市児童生徒科学作品展　調査研究の部 0.8762715903493459\n",
-      "18: 9 三重県 春季企画展「刀剣アラカルト」 0.8754749442874001\n",
-      "19: 35 京都府 京都精華大学55周年記念展「FATHOM—塩田千春、金沢寿美、ソー・ソウエン」 0.8753743020189951\n",
-      "20: 30 京都府 京都画壇の青春―栖鳳、松園につづく新世代たち 0.8748503212058061\n",
-      "21: 64 奈良県 特別展　仮面芸能の系譜　仮面芸能のふるさと奈良 0.8744389767884164\n",
-      "22: 11 三重県 令和４年度奉納 神宮式年遷宮奉賛美術品展 0.871295735436537\n",
-      "23: 43 大阪府 大坂好みを描く　呉春から孔寅・芳園へ 0.8708237755001733\n",
-      "24: 18 京都府 秋季特別展「みちのく いとしい仏たち」 0.8703983962457382\n",
-      "25: 48 大阪府 学びのひき出し―谷岡記念館40周年を記念して―　 0.8702498462561746\n",
-      "26: 22 京都府 もしも猫展 0.8693984008115856\n",
-      "27: 19 京都府 「四條派と角屋の交流展（後期）」 0.8692204919224296\n",
-      "28: 70 奈良県 文化勲章受章・卒寿記念特別展 上村淳之展 0.8688831347842952\n",
-      "29: 7 三重県 企画展「BE BRAVE ―ヴィアティン三重、2023年の軌跡―」 0.8687698919733962\n",
-      "30: 39 大阪府 視点転展 0.8665771686614405\n",
-      "31: 4 三重県 Sasa Adairコレクション 20世紀巨匠の版画達展 シャガール、ピカソ、ダリからロックウェルまで 0.8659206738099715\n",
-      "32: 62 奈良県 やきもの用語実見展　虫喰い、口紅ってなんだろう?? 0.865362749427084\n",
-      "33: 37 大阪府 秘密のジュウイSHOW 0.8653384529998468\n",
-      "34: 15 滋賀県 特別企画展「近江・聖徳太子伝承社寺の美術―地域に根付いた文化財たち―」 0.8635289641881599\n",
-      "35: 74 奈良県 特別展　いぬねこ彩彩　―東アジアの犬と猫の絵画― 0.8634532619262019\n",
-      "36: 82 和歌山県 第2回和歌山県人会世界大会記念特別事業　トランスボーダー：和歌山とアメリカをめぐる移民と美術 0.8626476869366586\n",
-      "37: 29 京都府 挑み、求めて、美の極致―みほとけ・根来・茶の湯釜― 0.8623025327260908\n",
-      "38: 17 京都府 きらめきはぐくむ 京都の学校と伝統工芸――西陣織・京友禅・京焼―― 0.8621903884262573\n",
-      "39: 81 和歌山県 企画展　新収蔵品展 0.8620918285768895\n",
-      "40: 69 奈良県 お水取り 0.8614300936552083\n",
-      "41: 78 奈良県 富山市・長松山本法寺蔵「法華経曼荼羅図」の世界Ⅱ― 描かれたものがたり ― 0.8612903890634438\n",
-      "42: 25 京都府 今年の漢字®展 0.8612091284524646\n",
-      "43: 52 兵庫県 開館40周年記念企画展「ひょうご五国のやきもの」 0.8611355396878284\n",
-      "44: 2 三重県 開館30周年記念　特別企画展　昭和のくらし　昭和の一隅 0.8600045585295982\n",
-      "45: 75 奈良県 特別企画展　朝鮮螺鈿の美 0.8593197879435178\n",
-      "46: 68 奈良県 新たに修理された文化財 0.8588837495610674\n",
-      "47: 6 三重県 特別企画展 三方領知替200年　行田市・桑名市・白河市友好都市締結25周年記念合同企画展「武門の遺産ー徳川家を支えた忍・桑名・白河ー」 0.8578333457217187\n",
-      "48: 8 三重県 新春企画展「松平定信と源氏物語」【特集陳列】〈山〉と〈月〉の日本画／刀剣セレクション3 ー桑博ドラゴンズー 0.8575151618374088\n",
-      "49: 56 兵庫県 絵図から見る人々のくらし 0.8572203634885831\n",
-      "50: 55 兵庫県 企画展「飼育係がとらえた！決定的瞬間！」 0.8571344585407511\n",
-      "51: 80 和歌山県 企画展　高野山寺領の村 0.8542457829493079\n",
-      "52: 21 京都府 収蔵品紹介37「裾引くトレーン―19世紀後半のドレス」展 0.8540181679825253\n",
-      "53: 63 奈良県 夏・秋季特別展「人々の祈りを見守る 文様となった招福の動物や植物たち」 0.8536552082536254\n",
-      "54: 45 大阪府 鳥の羽根のふしぎ 0.853576368546438\n",
-      "55: 53 兵庫県 チームラボ 無限の連続の中の存在 0.8522288855121001\n",
-      "56: 66 奈良県 第75回　正倉院展 0.851513365172667\n",
-      "57: 47 大阪府 作家の道へ―司馬遼太郎と「近代説話」 0.8509700403879633\n",
-      "58: 42 大阪府 楽しい茶の湯　タノシイチャノユ 0.8503686063092988\n",
-      "59: 20 京都府 貨物鉄道輸送 150 年記念企画展 「モノを運ぶ鉄道展〜列車が乗せるのは人だけじゃない。〜」 0.8498333896773383\n",
-      "60: 77 奈良県 文字を愛でる　―経典・文学・手紙から― 0.8497101323673585\n",
-      "61: 79 和歌山県 生誕850年記念特別展　紀州・明恵上人伝 0.8488672348776523\n",
-      "62: 61 兵庫県 街道の風景 ～宿場町に伝わったもの～ 0.8484190302165475\n",
-      "63: 44 大阪府 特別展「高槻城主列伝」 0.844946214794347\n",
-      "64: 16 滋賀県 秋季特別展「金峯山の遺宝と神仏」 0.843576754818559\n",
-      "65: 14 三重県 「きらめく亀山刀剣鐔 ー国助・正吉・国友・間ー」 0.8418631954411686\n",
-      "66: 24 京都府 並河靖之、その人生観 七宝と親交 0.8417380778243044\n",
-      "67: 59 兵庫県 お堂の道具あれこれー小野市文化財悉皆調査速報展2ー 0.8414459154988027\n",
-      "68: 27 京都府 東福寺 0.8409507167890483\n",
-      "69: 40 大阪府 プラネタリウムの歴史と大阪 0.8398756141506946\n",
-      "70: 34 京都府 茶碗 -茶を飲む器の変遷と多様性- 0.8387759341173421\n",
-      "71: 26 京都府 桂小五郎と幾松～広戸文庫史料～ 0.8377704985643194\n",
-      "72: 32 京都府 中国青銅器の時代 0.8375257969391147\n",
-      "73: 23 京都府 若狭の古墳―よみがえる若狭の王者たち― 0.8370226810384181\n",
-      "74: 12 三重県 鶴斑毛御彫馬 0.8348487863106332\n",
-      "75: 49 大阪府 恩智遺跡－八尾で最も古いムラ－ 0.8338756259511527\n",
-      "76: 50 大阪府 おくすり大百科　目指せ！おくすり博士　歴史編 0.8335672838504995\n",
-      "77: 41 大阪府 こどものためのジオ・カーニバル 0.8319598318414907\n",
-      "78: 60 兵庫県 世界のクリスマス＊喜びの造形 0.8306160626412457\n",
-      "79: 51 兵庫県 豊岡の幕末・維新 0.8300991594836789\n",
-      "80: 58 兵庫県 駅家発掘！－播磨から見えた古代日本の交通史－ 0.8290860369636143\n",
-      "81: 46 大阪府 たかつき発掘-遺跡が語る高槻の歴史-　 0.8289620316402343\n",
-      "82: 28 京都府 青銅器になった動物たち 0.8252274241305231\n",
-      "83: 13 三重県 三重のさかな　伊勢エビ 0.8220233059405776\n",
-      "84: 10 三重県 本居を取り巻く女性たち 0.813410702556225\n",
+      "1: 10 三重県 本居を取り巻く女性たち 0.8208336525642417\n",
+      "2: 94 兵庫県 【小企画展】鉄斎―故事をえがく― 0.8156188303211724\n",
+      "3: 35 京都府 若狭の古墳―よみがえる若狭の王者たち― 0.8149858429751686\n",
+      "4: 28 京都府 収蔵品紹介37「裾引くトレーン―19世紀後半のドレス」展 0.8128700037391022\n",
+      "5: 38 京都府 桂小五郎と幾松～広戸文庫史料～ 0.8123688076494109\n",
+      "6: 65 大阪府 なにわの考古学 0.8113361435292437\n",
+      "7: 76 大阪府 たかつき発掘-遺跡が語る高槻の歴史-　 0.8109669436499908\n",
+      "8: 102 兵庫県 絵図から見る人々のくらし 0.8107300922107973\n",
+      "9: 74 大阪府 特別展「高槻城主列伝」 0.8107050973622122\n",
+      "10: 53 京都府 白沙村荘秋季展　2023　「名品よ、再び。」 0.8100034556491591\n",
+      "11: 138 和歌山県 移民と和歌山2023：記憶と遺物の継承～過去から現在、そして未来へ～ 0.8099813862948784\n",
+      "12: 21 滋賀県 国史跡甲山古墳・円山古墳石室特別公開 0.809711235722445\n",
+      "13: 134 和歌山県 歴史を語る道具たち 0.8094659340043635\n",
+      "14: 137 和歌山県 律令国家成立前夜 0.8091182031668459\n",
+      "15: 128 和歌山県 生誕850年記念特別展　紀州・明恵上人伝 0.8090702220608841\n",
+      "16: 20 滋賀県 源氏物語と大津 0.8090001299616294\n",
+      "17: 30 京都府 開館45周年記念「定本 樂歴代」 0.8088469609004456\n",
+      "18: 73 大阪府 大坂好みを描く　呉春から孔寅・芳園へ 0.808076651666961\n",
+      "19: 19 三重県 「きらめく亀山刀剣鐔 ー国助・正吉・国友・間ー」 0.8074121997139798\n",
+      "20: 107 兵庫県 街道の風景 ～宿場町に伝わったもの～ 0.8061816430382772\n",
+      "21: 124 奈良県 文字を愛でる　―経典・文学・手紙から― 0.8052188336188848\n",
+      "22: 126 奈良県 天理図書館 開館93周年記念展「源氏物語展－珠玉の三十三選－」 0.8051900821651107\n",
+      "23: 97 兵庫県 豊岡の幕末・維新 0.8049047008504348\n",
+      "24: 132 和歌山県 原勝四郎展 　南海の光を描く 0.8042324395510303\n",
+      "25: 113 奈良県 おん祭と春日信仰の美術 0.8037819266460366\n",
+      "26: 81 大阪府 知られざる南河内－地域に眠る遺跡たち－ 0.8036064131698505\n",
+      "27: 85 兵庫県 イギリス切手 1952-2022 0.8032515088035113\n",
+      "28: 98 兵庫県 開館40周年記念企画展「ひょうご五国のやきもの」 0.8032249532726553\n",
+      "29: 8 三重県 新春企画展「松平定信と源氏物語」【特集陳列】〈山〉と〈月〉の日本画／刀剣セレクション3 ー桑博ドラゴンズー 0.8030310657010146\n",
+      "30: 133 和歌山県 小企画展「原勝四郎と同時代の画家たち」 0.8028605451791782\n",
+      "31: 12 三重県 特別展示「メナシのアイヌとともに生きる～加賀伝蔵、松浦武四郎、南摩綱紀～」 0.8026986826199672\n",
+      "32: 131 和歌山県 第2回和歌山県人会世界大会記念特別事業　トランスボーダー：和歌山とアメリカをめぐる移民と美術 0.80262495108252\n",
+      "33: 78 大阪府 学びのひき出し―谷岡記念館40周年を記念して―　 0.8022830113055007\n",
+      "34: 77 大阪府 作家の道へ―司馬遼太郎と「近代説話」 0.8015262274780394\n",
+      "35: 105 兵庫県 お堂の道具あれこれー小野市文化財悉皆調査速報展2ー 0.8013355300906047\n",
+      "36: 92 兵庫県 秋季特別展「茶会に招かれて」 0.8011881913198129\n",
+      "37: 2 三重県 開館30周年記念　特別企画展　昭和のくらし　昭和の一隅 0.8010319456496616\n",
+      "38: 123 奈良県 特別企画展　やまと絵のこころ 0.8007734436539856\n",
+      "39: 55 京都府 表装の愉しみ －ある表具師のものがたり 0.8006330240639301\n",
+      "40: 79 大阪府 恩智遺跡－八尾で最も古いムラ－ 0.8002489633257643\n",
+      "41: 6 三重県 特別企画展 三方領知替200年　行田市・桑名市・白河市友好都市締結25周年記念合同企画展「武門の遺産ー徳川家を支えた忍・桑名・白河ー」 0.7999041416942613\n",
+      "42: 86 兵庫県 海と大地と弥生人－大いなる自然への祈り－ 0.7994818175213938\n",
+      "43: 103 兵庫県 第59回 姫路市児童生徒科学作品展　調査研究の部 0.7991471833197047\n",
+      "44: 100 兵庫県 司馬遼太郎生誕百年　企画展「小林修写真展　司馬遼太郎『街道をゆく』の視点　－歩いた風土、見抜いた時代－」 0.7986756169815924\n",
+      "45: 42 京都府 挑み、求めて、美の極致―みほとけ・根来・茶の湯釜― 0.7984727266960359\n",
+      "46: 45 京都府 嶋春香 0.7981375061072348\n",
+      "47: 4 三重県 Sasa Adairコレクション 20世紀巨匠の版画達展 シャガール、ピカソ、ダリからロックウェルまで 0.7980961102496145\n",
+      "48: 9 三重県 春季企画展「刀剣アラカルト」 0.7976741695169954\n",
+      "49: 62 大阪府 茶の湯の茶碗 その歴史と魅力 0.7976334962400303\n",
+      "50: 129 和歌山県 企画展　高野山寺領の村 0.7975962872067858\n",
+      "51: 117 奈良県 文化勲章受章・卒寿記念特別展 上村淳之展 0.7970557143743988\n",
+      "52: 11 三重県 特別展「海の祈り－海浜の神社と伊勢神宮－」 0.7966630712869324\n",
+      "53: 3 三重県 つながる琳派スピリット　神坂雪佳展 0.796521968352026\n",
+      "54: 72 大阪府 楽しい茶の湯　タノシイチャノユ 0.7963231091018491\n",
+      "55: 115 奈良県 お水取り 0.796316060729645\n",
+      "56: 130 和歌山県 企画展　新収蔵品展 0.7962075402327548\n",
+      "57: 104 兵庫県 駅家発掘！－播磨から見えた古代日本の交通史－ 0.7952407993602697\n",
+      "58: 24 京都府 きらめきはぐくむ 京都の学校と伝統工芸――西陣織・京友禅・京焼―― 0.7952307186432653\n",
+      "59: 15 三重県 神宮125社―摂社･末社･所管社の遷座― 0.7951800513604577\n",
+      "60: 58 京都府 浜村満果 個展「9 Hours Sleep」 0.7951499581455365\n",
+      "61: 141 和歌山県 魅惑の初島　流転のみほとけたち 0.7949858996194654\n",
+      "62: 120 奈良県 近代の日本画〈日本画展示室〉 0.7948321495556642\n",
+      "63: 23 滋賀県 秋季特別展「金峯山の遺宝と神仏」 0.7938644618457829\n",
+      "64: 34 京都府 コスチュームジュエリー 美の変革者たち シャネル、ディオール、スキャパレッリ 小瀧千佐子コレクションより 0.7936163292571177\n",
+      "65: 114 奈良県 新たに修理された文化財 0.7931212773851212\n",
+      "66: 64 大阪府 上方の家康 0.792406500282807\n",
+      "67: 47 京都府 ［2023 冬期］コレクションルーム 特集「昭和前期の日本画と古典」 0.7923084080378016\n",
+      "68: 136 和歌山県 葛城修験の世界 0.7922835359813205\n",
+      "69: 5 三重県 隙あらば猫 町田尚子絵本原画展 0.7921894554978356\n",
+      "70: 59 京都府 写真・新聞で振り返る昭和28年災害 0.7917736111218746\n",
+      "71: 54 京都府 中国青銅器の時代 0.7916838699589785\n",
+      "72: 80 大阪府 おくすり大百科　目指せ！おくすり博士　歴史編 0.7915504277678913\n",
+      "73: 119 奈良県 松本竣介、駒井哲郎から舟越桂まで－戦後日本の洋画・版画－〈洋画展示室〉 0.7908051209122546\n",
+      "74: 66 大阪府 大名家の茶道具－細川三斎、片桐石州から柳沢尭山まで－ 0.7907522052352121\n",
+      "75: 68 大阪府 安野光雅展 0.7906249284462894\n",
+      "76: 43 京都府 京都画壇の青春―栖鳳、松園につづく新世代たち 0.790264312961942\n",
+      "77: 101 兵庫県 企画展「飼育係がとらえた！決定的瞬間！」 0.7902359189232983\n",
+      "78: 83 大阪府 都市の祈り　住吉祭と堺 0.7902342578893294\n",
+      "79: 110 奈良県 特別展　仮面芸能の系譜　仮面芸能のふるさと奈良 0.7901463044927124\n",
+      "80: 135 和歌山県 花鳥風月－和歌山市立博物館収蔵品展－ 0.7900580450640512\n",
+      "81: 14 三重県 玉佩（ぎょくはい）・玉佩筥（ぎょくはいばこ）・玉筥（たまばこ）・刀剣研磨（とうけんけんま） 0.789825138636522\n",
+      "82: 108 奈良県 やきもの用語実見展　虫喰い、口紅ってなんだろう?? 0.7897443359811595\n",
+      "83: 44 京都府 小林正和とその時代―ファイバーアート、その向こうへ 0.7897372658909377\n",
+      "84: 26 京都府 「四條派と角屋の交流展（後期）」 0.7896834608243551\n",
+      "85: 29 京都府 令和5年秋季特別展「裏千家十三代家元　圓能斎鉄中宗室―現代への礎―」 0.7892289615888181\n",
+      "86: 31 京都府 開館三十五周年記念展覧会 秋冬展 吉祥文様と草虫−京都のなかの朝鮮美術− 0.789128622129253\n",
+      "87: 22 滋賀県 特別企画展「近江・聖徳太子伝承社寺の美術―地域に根付いた文化財たち―」 0.7877637374161087\n",
+      "88: 25 京都府 秋季特別展「みちのく いとしい仏たち」 0.7876350807066683\n",
+      "89: 139 和歌山県 和歌山県のトカゲとヤモリたち 0.7875728967280398\n",
+      "90: 17 三重県 しまたね＋おおたはるか「鳥羽の植物　山と港、海と島」 0.7875255558132372\n",
+      "91: 63 大阪府 護 0.7866024953127232\n",
+      "92: 36 京都府 並河靖之、その人生観 七宝と親交 0.7865325054352608\n",
+      "93: 122 奈良県 特別企画展　朝鮮螺鈿の美 0.7863707839995119\n",
+      "94: 89 兵庫県 チンパンジー企画展「歴史を彩った王子動物園のレジェンドたち」 0.7861671315132369\n",
+      "95: 91 兵庫県 秋季展「中国陶磁の植物文」「アナトリア絨毯の植物文」 0.786153925122421\n",
+      "96: 96 兵庫県 日本工芸会陶芸部会50周年記念展 未来へつなぐ陶芸ー伝統工芸のチカラ 0.7857517300633807\n",
+      "97: 125 奈良県 富山市・長松山本法寺蔵「法華経曼荼羅図」の世界Ⅱ― 描かれたものがたり ― 0.7852583501838123\n",
+      "98: 109 奈良県 夏・秋季特別展「人々の祈りを見守る 文様となった招福の動物や植物たち」 0.7852300643316279\n",
+      "99: 18 三重県 三重のさかな　伊勢エビ 0.7851586391602199\n",
+      "100: 57 京都府 京都精華大学55周年記念展「FATHOM—塩田千春、金沢寿美、ソー・ソウエン」 0.7851306681310805\n",
+      "101: 13 三重県 令和４年度奉納 神宮式年遷宮奉賛美術品展 0.7845147014895505\n",
+      "102: 88 兵庫県 原種シクラメンとダイヤモンドリリー展 0.784512552081275\n",
+      "103: 140 和歌山県 弘法大師空海の弟子たち 0.7839995084430212\n",
+      "104: 56 京都府 茶碗 -茶を飲む器の変遷と多様性- 0.7839976095107342\n",
+      "105: 1 三重県 開館30周年記念　特別展 立原位貫　〜想像力から創造力へ〜 0.7837508774589362\n",
+      "106: 112 奈良県 第75回　正倉院展 0.7833883138735428\n",
+      "107: 37 京都府 今年の漢字®展 0.783030920337689\n",
+      "108: 61 京都府 企画展「拝まれてきた仏像―ふたたび拝まれる日をまつ―」 0.7828816146674719\n",
+      "109: 90 兵庫県 小磯良平生誕120年　働く人びと 0.7822736910278144\n",
+      "110: 7 三重県 企画展「BE BRAVE ―ヴィアティン三重、2023年の軌跡―」 0.7818945740063553\n",
+      "111: 111 奈良県 特別展　漂泊の画家　不染鉄 0.7817423107166459\n",
+      "112: 16 三重県 鶴斑毛御彫馬 0.7803637043181862\n",
+      "113: 46 京都府 京都市美術館開館90周年記念展 村上隆（仮称） 0.7803607726407692\n",
+      "114: 27 京都府 貨物鉄道輸送 150 年記念企画展 「モノを運ぶ鉄道展〜列車が乗せるのは人だけじゃない。〜」 0.7803503084731818\n",
+      "115: 84 大阪府 泉州地域の食とくらし－大阪産(もん)の宝庫－ 0.7800671122692211\n",
+      "116: 32 京都府 もしも猫展 0.7785711766585469\n",
+      "117: 127 奈良県 高塚孝一写真展 KOICHI’S SHOWCASE Past and Future 0.7784677789002028\n",
+      "118: 95 兵庫県 企画展「妖怪と自然の博物展」 0.7783119400069292\n",
+      "119: 82 大阪府 特別展『ロードバイクの進化』展―より速く、挑戦の歴史― 0.7780573197443268\n",
+      "120: 70 大阪府 プラネタリウムの歴史と大阪 0.7775175307969646\n",
+      "121: 69 大阪府 視点転展 0.7773759837534732\n",
+      "122: 41 京都府 （開園120周年記念）のすたるじー写真展 0.777332553064491\n",
+      "123: 116 奈良県 空海　KŪKAI ―密教のルーツとマンダラ世界 0.7760487990415117\n",
+      "124: 118 奈良県 企画展　未来につなぐ日本画展 －松伯美術館公募展優秀賞受賞作家の現在Ⅱ－ 0.7759905770556346\n",
+      "125: 67 大阪府 秘密のジュウイSHOW 0.7753044248236269\n",
+      "126: 87 兵庫県 森の音ワンダークリスマス2023 0.7743237068919766\n",
+      "127: 33 京都府 Kyoto Art for Tomorrow 2024-京都府新鋭選抜展- 0.7737877174766385\n",
+      "128: 121 奈良県 特別展　いぬねこ彩彩　―東アジアの犬と猫の絵画― 0.7737214595371552\n",
+      "129: 60 京都府 細川護熙筆「雲龍図」襖絵特別公開 0.7734702530629531\n",
+      "130: 71 大阪府 こどものためのジオ・カーニバル 0.7722162383768899\n",
+      "131: 39 京都府 東福寺 0.7721518086015662\n",
+      "132: 40 京都府 青銅器になった動物たち 0.7719321493294375\n",
+      "133: 48 京都府 ［2023 秋期］コレクションルーム 特集「Tardiologyへの道程」 0.7707162442636115\n",
+      "134: 75 大阪府 鳥の羽根のふしぎ 0.7695349569815196\n",
+      "135: 93 兵庫県 牛腸茂雄 写真展 “生きている”ということの証 0.7695320176916431\n",
+      "136: 50 京都府 山本雄教：仮想の換金 (priceless museum) 0.7679076591034012\n",
+      "137: 52 京都府 井田幸昌展 Panta Rhei｜パンタ・レイ―世界が存在する限り 0.7676682299573723\n",
+      "138: 106 兵庫県 世界のクリスマス＊喜びの造形 0.7626648021481826\n",
+      "139: 51 京都府 竹内栖鳳 破壊と創生のエネルギー 0.7626582767715239\n",
+      "140: 99 兵庫県 チームラボ 無限の連続の中の存在 0.7616526742786529\n",
+      "141: 49 京都府 MUCA展 ICONS of Urban Art 〜バンクシーからカウズまで〜 0.7527027279103164\n",
       "====Best Doc====\n",
-      "number: 73\n",
-      "name: 近代の日本画〈日本画展示室〉\n",
-      "====Worst Doc====\n",
       "number: 10\n",
-      "name: 本居を取り巻く女性たち\n"
+      "name: 本居を取り巻く女性たち\n",
+      "====Worst Doc====\n",
+      "number: 49\n",
+      "name: MUCA展 ICONS of Urban Art 〜バンクシーからカウズまで〜\n"
      ]
     }
    ],
    "source": [
     "# 方法2：ベクトルデータベースの検索\n",
+    "#!pip install openai[embeddings]\n",
+    "\n",
     "import openai\n",
     "from openai.embeddings_utils import cosine_similarity\n",
     "import os,json\n",
@@ -213,7 +272,7 @@
     "    INDEX = json.load(f)\n",
     "\n",
     "# これが検索用の文字列\n",
-    "QUERY = '関西で有名な絵画が展示される展示会'\n",
+    "QUERY = '幕末　明治維新　'\n",
     "\n",
     "# 検索用の文字列をベクトル化\n",
     "query = openai.Embedding.create(\n",
@@ -270,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
